SVY-19289 When refreshing NGDesktop, an error shows up multiple times